--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -21,7 +21,7 @@
                 <div class="col-sm-6">
                     <hr class="mb-4 mt-0"/>
                     <div class="bg-light">
-                        <p class="px-2">Your purchase has been successfully completed! Soon you'll receive an email with all the details.</p>
+                        <p class="px-2">Your purchase has been successfully completed! Soon you'll receive a confirmation email.</p>
                         <p class="px-2 small"><span th:replace="fragments/components::contactUs"></span></p>
                     </div>
                 </div>
