--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -117,14 +117,14 @@
                 <!-- NavBar -->
                 <nav class="navbar navbar-expand-sm p-0 m-0" style="background-color:#e9ecef">
                     <!-- Toggler/collapsibe Button -->
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainCatsNavBar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <!-- Navbar links -->
-                    <div class="collapse navbar-collapse" id="#collapsibleNavbar">
+                    <div class="collapse navbar-collapse" id="mainCatsNavBar">
                         <ul class="navbar-nav">
-                            <li class="nav-item" th:each="cat : ${mainCategories}">
-                                <a class="categoryLink btn btn-outline-info btn-sm border-0 rounded-0" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name}">Category Name</a>
+                            <li class="nav-item" th:each="cat,stats : ${mainCategories}">
+                                <a th:if="${stats.index < __${@environment.getProperty('fm.front-end.common-components.num-of-main-categories')}__}" class="categoryLink btn btn-outline-info btn-sm border-0 rounded-0" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name}">Category Name</a>
                             </li>
                         </ul>
                     </div>
