--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -107,7 +107,7 @@
                     <button class="accordion" id="categoryAcc">Category</button>
                     <div class="panel mb-1">
                         <div class="my-3" th:each="cat : ${childrenCategories}">
-                            <a class="categoryLink text-secondary font-weight-light" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name.substring(0, T(java.lang.Math).min(cat.name.length(), __${@environment.getProperty('fm.front-end.books.filter.general-max-size')}__))}">Category Name</a>
+                            <a class="categoryLink text-secondary font-weight-light" style="text-decoration: none" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name.substring(0, T(java.lang.Math).min(cat.name.length(), __${@environment.getProperty('fm.front-end.books.filter.general-max-size')}__))}">Category Name</a>
                         </div>
                     </div>
                     <!-- price criteria -->
